Closed
Bug 185467
Opened 23 years ago
Closed 21 years ago
[FIXr]<hr>-tags are displayed dotted on pages that contain image-maps
Categories
(Core Graveyard :: GFX, defect, P2)
Tracking
(Not tracked)
RESOLVED
FIXED
mozilla1.8beta2
People
(Reporter: jdarmochwal, Assigned: bzbarsky)
References
Details
Attachments
(3 files, 1 obsolete file)
|
1006 bytes,
text/html
|
Details | |
|
5.12 KB,
image/png
|
Details | |
|
1.13 KB,
patch
|
dbaron
:
review+
dbaron
:
superreview+
asa
:
approval1.8b2+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.3a) Gecko/20021212
Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.3a) Gecko/20021212
On pages that contain image-maps horizontal lines (<hr>-tag) are dotted. On
other pages these lines are solid.
When selecting the dotted lines or scrolling them out of view and then back
again they become solid.
Reproducible: Always
Steps to Reproduce:
1. go to a page containing <hr>-tags and image-maps (I will add a testcase)
Actual Results:
The horizontal lines are dotted.
Expected Results:
The horizontal lines should be solid.
| Reporter | ||
Comment 1•23 years ago
|
||
Comment 2•23 years ago
|
||
WFM 2002121308 PC/Win98.
A Linux-only issue?
| Assignee | ||
Comment 3•23 years ago
|
||
if repainting changes it, it's not layout....
Assignee: other → kmcclusk
Component: Layout → GFX Compositor
Comment 4•23 years ago
|
||
wfm - which display driver?
Confirming. I see this too, current trunk CVS, Linux. Use xmag to see it.
To the naked eye the lines may only appear as slightly greyer than usual.
screenshot of an xmag window with a snap of some hr's that have been partly
covered by another window. They covered areas appear as whole lines when
uncovered again.
Comment 7•23 years ago
|
||
Reproducible here using both debian's 1.2.1-3 and linux nightly build 2002121404
on debian sid (i386).
Comment 8•23 years ago
|
||
After making a few changes to the testcase, I've found that a HR placed
immediately before the image map stays dotted even if you cause it to be redrawn
(by selecting it, moving another window over it, etc.); also, if you select a
group of HRs, they're redrawn correctly, but if you select a group of HRs
including an HR that is immediately before the image map, *none* of them are
correctly redrawn.
3 people can reproduce, and i can't find a dup: Resolving as New.
I use nVidia driver 1.0-3123
Status: UNCONFIRMED → NEW
Ever confirmed: true
Updated•23 years ago
|
Priority: -- → P4
Target Milestone: --- → Future
Comment 10•22 years ago
|
||
This is WFM on a recent nightly (2003081304) on Win2k. As the reported problems
seem to be Linux specific can someone ruuning Linxu please check it again
following the checkin of fixes to bug 38370. (You'll need a trunk build from 1st
August 2003 or later). That bug fixed numerous problems with <hr> elements,
though as noted in comment #3 not clear this is/was ever a layout problem.
| Reporter | ||
Comment 11•21 years ago
|
||
removing this line:
aRenderingContext.SetLineStyle(nsLineStyle_kDotted);
in layout/generic/nsImageFrame.cpp solves this bug
| Assignee | ||
Comment 12•21 years ago
|
||
Jan, nice catch! That's not quite the right fix, though....
| Assignee | ||
Comment 13•21 years ago
|
||
Assignee: kmcclusk → bzbarsky
Attachment #179942 -
Attachment is obsolete: true
Status: NEW → ASSIGNED
Attachment #179960 -
Flags: superreview?(dbaron)
Attachment #179960 -
Flags: review?(dbaron)
| Assignee | ||
Updated•21 years ago
|
Priority: P4 → P2
Summary: <hr>-tags are displayed dotted on pages that contain image-maps → [FIX]<hr>-tags are displayed dotted on pages that contain image-maps
Target Milestone: Future → mozilla1.8beta2
Attachment #179960 -
Flags: superreview?(dbaron)
Attachment #179960 -
Flags: superreview+
Attachment #179960 -
Flags: review?(dbaron)
Attachment #179960 -
Flags: review+
| Assignee | ||
Updated•21 years ago
|
Summary: [FIX]<hr>-tags are displayed dotted on pages that contain image-maps → [FIXr]<hr>-tags are displayed dotted on pages that contain image-maps
| Assignee | ||
Comment 14•21 years ago
|
||
Comment on attachment 179960 [details] [diff] [review]
Pop off the style and color change too
Could this please be approved for 1.8b2? It's a very safe fix that makes us
not screw up all solid lines (borders, hr, etc) on pages with imagemaps...
Attachment #179960 -
Flags: approval1.8b2?
Comment 15•21 years ago
|
||
Comment on attachment 179960 [details] [diff] [review]
Pop off the style and color change too
a=asa
Attachment #179960 -
Flags: approval1.8b2? → approval1.8b2+
| Assignee | ||
Comment 16•21 years ago
|
||
Fixed. Jan, thank you again for locating the buggy code.
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
| Assignee | ||
Comment 17•21 years ago
|
||
*** Bug 203079 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 18•21 years ago
|
||
*** Bug 293133 has been marked as a duplicate of this bug. ***
Comment 19•20 years ago
|
||
*** Bug 327324 has been marked as a duplicate of this bug. ***
Updated•17 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•