Make sure to pop off the line style and color we use for imagemaps so it doesn't affect other drawing done by the page.  Bug 185467, buggy code found by Jan Darmochwal <jdarmochwal@gmx.de>, r+sr=dbaron